@@ -1309,11 +1309,15 @@ operator|==
 literal|null
 condition|)
 block|{
-try|try
-block|{
 name|ZkStateReader
 name|zk
 init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|zk
+operator|=
 operator|new
 name|ZkStateReader
 argument_list|(
@@ -1323,7 +1327,7 @@ name|zkClientTimeout
 argument_list|,
 name|zkConnectTimeout
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|zk
 operator|.
 name|createClusterStateWatchersAndUpdate
@@ -1348,6 +1352,17 @@ operator|.
 name|interrupt
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|zk
+operator|!=
+literal|null
+condition|)
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 throw|throw
 operator|new
 name|ZooKeeperException
@@ -1370,6 +1385,17 @@ name|KeeperException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+name|zk
+operator|!=
+literal|null
+condition|)
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 throw|throw
 operator|new
 name|ZooKeeperException
@@ -1392,6 +1418,17 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+name|zk
+operator|!=
+literal|null
+condition|)
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 throw|throw
 operator|new
 name|ZooKeeperException
@@ -1414,6 +1451,17 @@ name|TimeoutException
 name|e
 parameter_list|)
 block|{
+if|if
+condition|(
+name|zk
+operator|!=
+literal|null
+condition|)
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 throw|throw
 operator|new
 name|ZooKeeperException
@@ -1428,6 +1476,28 @@ literal|""
 argument_list|,
 name|e
 argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|zk
+operator|!=
+literal|null
+condition|)
+name|zk
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// do not wrap because clients may be relying on the underlying exception being thrown
+throw|throw
+name|e
 throw|;
 block|}
 block|}
