@@ -558,6 +558,18 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|KeeperException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|After
@@ -2378,6 +2390,89 @@ name|shutdown
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+DECL|method|testWrongZkChrootTest
+specifier|public
+name|void
+name|testWrongZkChrootTest
+parameter_list|()
+throws|throws
+name|MalformedURLException
+block|{
+name|CloudSolrServer
+name|server
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|server
+operator|=
+operator|new
+name|CloudSolrServer
+argument_list|(
+name|zkServer
+operator|.
+name|getZkAddress
+argument_list|()
+operator|+
+literal|"/xyz/foo"
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setDefaultCollection
+argument_list|(
+name|DEFAULT_COLLECTION
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|setZkClientTimeout
+argument_list|(
+literal|1000
+operator|*
+literal|60
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|connect
+argument_list|()
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|instanceof
+name|KeeperException
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|server
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+comment|// see SOLR-6146 - this test will fail by virtue of the zkClient tracking performed
+comment|// in the afterClass method of the base class
 block|}
 block|}
 end_class
